updated job matches description

--- a/patterns/04-pages-03-job-03-job/04-pages-03-job-03-job.html
+++ b/patterns/04-pages-03-job-03-job/04-pages-03-job-03-job.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="pl">
 	<head>
-		<title>Business Administration</title>
+		<title>Medical Assistant</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width" />
 
@@ -135,10 +135,10 @@
                             <div class="col-lg-12">
                                 <ol class="breadcrumb">
                                     <li><a href="#">Home</a></li>
-                                    <li class="active"><span>Business Administration</span></li>
+                                    <li class="active"><span>Medical Assistant</span></li>
                                 </ol>
 
-                                <h1>Business Administration</h1>
+                                <h1>Medical Assistant</h1>
                             </div>
                         </div>
 
@@ -147,15 +147,15 @@
                                 <div class="main-box clearfix">
 
                                 <header class="main-box-header clearfix">
-                                    <h2>Business Administration</h2>
+                                    <h2>Medical Assistant</h2>
                                 </header>
                                 <div class="main-box-body clearfix">
                                     <div class="row">
                                         <dl class="dl-horizontal">
                                             <dt>Location:</dt>
-                                            <dd>San Francisco, CA</dd>
+                                            <dd>Los Angeles, CA</dd>
                                             <dt>Company:</dt>
-                                            <dd>Ariba</dd>
+                                            <dd>Cedars-Sinai</dd>
                                             <dt>Minimum Experience:</dt>
                                             <dd>2</dd>
                                             <dt>Match Score:</dt>
@@ -164,88 +164,21 @@
                                     </div>
                                     <div class="row">
                                         <p>
-                                            <a href="https://career012.successfactors.eu/career?company=SAP&career_ns=job_listing&navBarLevel=JOB_SEARCH&_s.crb=MneLYNPzrA7WOnm6076AQZ1aVcc&career_job_req_id=58841" class="btn btn-primary">
+                                            <a href="https://www.cedars-sinaimedicalcenter.apply2jobs.com//ProfExt/index.cfm?fuseaction=mExternal.showJob&RID=18419&CurrentPage=16&sid=69" class="btn btn-primary">
                                                 <i class="fa fa-lg"></i> Apply
                                             </a>
                                         </p>
                                     </div>
                                     <div class="row">
-                                        <p><p>As market leader in enterprise application software, SAP helps companies of all sizes and industries innovate through simplification. From the back office to the boardroom, warehouse to storefront, on premise to cloud, desktop to mobile device – SAP empowers people and organizations to work together more efficiently and use business insight more effectively to stay ahead of the competition. SAP applications and services enable customers to operate profitably, adapt continuously, and grow sustainably.</p>
-
-<p> </p>
-        <p><strong><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">EXPECTATIONS AND TASKS:</span></span></strong></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- Ensure and execute the process of handling resource requests, searching and staffing resources with a high level of efficiency, quality, compliance and discipline. E.g. Serve as request owner, role owner, searching party, check completeness, and validate requests, conduct 3rd party processes, identify and propose candidates according to staffing processes, and help on escalations</span></span></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- Understand and support Advanced Delivery Management (ADM) as the new way to deliver Services</span></span></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- Work as a multiplier for ADM  </span></span></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- Support of internal projects / activities as experienced subject matter expert in a process area</span></span></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- Project responsibilities – definitions, rollout, training support, communication plan</span></span></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- Elaborate and coordinate dedicated work streams as part of a program</span></span></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- Internal systems maintenance &amp; reporting</span></span></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- Management Reporting, including reporting based on Utilization, Forecast and Budgeting</span></span></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- Knowledge Management capabilities, such as setting up KM processes to capture and document knowledge, sharing the learning from experiences and projects, ensuring reusability of knowledge , structuring content and coaching others on how to use / manage the knowledge</span></span></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- Support the creation of processes, frameworks, reporting tools, and guidelines</span></span></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- General communication support, creation of content</span></span></p>
-
-<p> </p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">In the area of Service Delivery:</span></span></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- Consulting Services definition &amp; maintenance</span></span></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- Oversees key Delivery processes – Bid, Services Delivery, Risk Management</span></span></p>
-
-<p> </p>
-
-<p><strong><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">WORK EXPERIENCE:</span></span></strong></p>
-
-<p><strong><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">Functional Experience</span></span></strong></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- 2 years experience as Business Support Associate</span></span></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- Experience in taking responsibility for assigned project tasks</span></span></p>
-
-<p> </p>
-
-<p><strong><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">Managerial Experience</span></span></strong></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- Experience in leading small virtual teams</span></span></p>
-
-<p> </p>
-
-<p><strong><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">EDUCATION AND QUALIFICATIONS / SKILLS AND COMPETENCIES:</span></span></strong></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- Final degree (e.g. business administration, psychology, economics, computer sciences) or equivalent work experience</span></span></p>
-
-<p><span style="font-size:12.0px"><span style="font-family:arial, helvetica, sans-serif">- English: Conversational</span></span></p>
-        <p> </p>
-
-<p><strong>SAP'S DIVERSITY COMMITMENT</strong></p>
-
-<p> </p>
-
-<p>To harness the power of innovation, SAP invests in the development of its diverse employees. We aspire to leverage the qualities and appreciate the unique competencies that each person brings to the company.</p>
-
-<p> </p>
-
-<p>SAP is committed to the principles of Equal Employment Opportunity and to providing reasonable accommodations to applicants with physical and/or mental disabilities. If you are interested in applying for employment with SAP and are in need of accommodation or special assistance to navigate our website or to complete your application, please send an e-mail with your request to HR Direct (Americas: <a href="mailto:hrdirectamericas@sap.com">hrdirectamericas@sap.com</a>, APJ: <a href="mailto:hrdirectapj@sap.com">hrdirectapj@sap.com</a>, EMEA: <a href="mailto:careers@sap.com">careers@sap.com</a>). Requests for reasonable accommodation will be considered on a case-by-case basis.</p>
+                                        <p>The Medical Assistant supports the physician and nursing staff in the delivery of health care by performing a variety of medically related tasks.<BR/><BR/>Greets patients.<BR/>Manages patient care flow.<BR/>Prepares patients for provider by reviewing current medications and record in medical record.<BR/>Takes appropriate vital signs and record in medical record.<BR/>Sets up exam room/procedure rooms appropriately based on patient visit needs.<BR/>Assists provider in examination/procedure rooms as needed.<BR/>Performs designated diagnostic tests as directed by provider.<BR/>Draws, prepares designated lab work and/or specimens as directed by provider.<BR/>Administers immunization, injections, or oral medications as directed by provider.<BR/>Uses PRN/Smart Talk systems to convey lab results to patients as defined by provider.<BR/>Assists in follow-up scheduling needs.<BR/>Answers patient calls in timely fashion.<BR/>Prepares charts as needed.<BR/>Ability to understand and assist two or more providers with clinical care.<BR/>Handles all designated clinical care telephone interactions with provider input.<BR/>Communicates all significant clinical findings to MD.<BR/>Serves as an advocate for patient and utilizes appropriate resources.</p>
+                                        <p>Medical Assistant certification from accredited school.  Phlebotomy Certified.<BR/><BR/>Two to five (2-5) years experience in outpatient medical setting preferred.  Intermediate computer skills preferred.  Proven/provide customer service skills.  Basic understanding of patient care flow and insurance concepts.  Ability to correctly set up exam rooms/procedure rooms using sterile/aseptic technique with appropriate instruments or trays.  Basic ability to prepare patient for office visit/procedures.  Ability to correctly perform vital signs and accurately record data.  Ability to determine current medications that patient is using and record accurately.  Ability to correctly prepare lab work/specimens for pick up.  Ability to perform basic testing and specimen collection.  Basic understanding of cleaning, sterilization of autoclaving procedures.  Basic ability to perform and record QC testing on designated equipment.  Ability to determine current medications that patient is using and record accurately.  Ability to correctly prepare lab work/specimens for pick up.  Ability to correctly prepare lab work/specimens for pick up.  Ability to perform basic testing and specimen collection.  Basic understanding of pharmacology and medication administration.  Basic understanding of cleaning, sterilization of autoclaving procedures.  Basic ability to perform and record QC testing on designated equipment.  Ability to problem solve and prioritize work assignments.  Intermediate understanding of patient flow and insurance concepts.  Ability to schedule "nurse visits" for phlebotomy, testing, or other procedures.  Ability to handle provider correspondence and communications as related to clinical care.  Understanding of medical supply ordering and cost containment.</p>
                                     </div>
                                     <div class="row">
                                         <dl class="dl-horizontal">
                                             <dt>Location:</dt>
-                                            <dd>San Francisco, CA</dd>
+                                            <dd>Los Angeles, CA</dd>
                                             <dt>Company:</dt>
-                                            <dd>Ariba</dd>
+                                            <dd>Cedars-Sinai</dd>
                                             <dt>Minimum Experience:</dt>
                                             <dd>2</dd>
                                             <dt>Match Score:</dt>
@@ -254,7 +187,7 @@
                                     </div>
                                     <div class="row">
                                         <p>
-                                            <a href="https://career012.successfactors.eu/career?company=SAP&career_ns=job_listing&navBarLevel=JOB_SEARCH&_s.crb=MneLYNPzrA7WOnm6076AQZ1aVcc&career_job_req_id=58841" class="btn btn-primary">
+                                            <a href="https://www.cedars-sinaimedicalcenter.apply2jobs.com//ProfExt/index.cfm?fuseaction=mExternal.showJob&RID=18419&CurrentPage=16&sid=69" class="btn btn-primary">
                                                 <i class="fa fa-lg"></i> Apply
                                             </a>
                                         </p>
