updated job matches description

--- a/patterns/04-pages-02-job-seeker-02-job-seeker-matches/04-pages-02-job-seeker-02-job-seeker-matches.html
+++ b/patterns/04-pages-02-job-seeker-02-job-seeker-matches/04-pages-02-job-seeker-02-job-seeker-matches.html
@@ -160,10 +160,10 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <a href="../../patterns/04-pages-03-job-03-job/04-pages-03-job-03-job.html">
-                            <span class="title value">Business Support Specialist</span>
+                            <span class="title value">Medical Assistant II</span>
                         </a>
                         <span class="headline">
-                            <strong>San Francisco, CA</strong> - Ariba
+                            <strong>Los Angeles, CA</strong> - Cedars-Sinai
                         </span>
                     </div>
                     <div class="col-sm-4 text-right">
@@ -200,10 +200,10 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <a href="../../patterns/04-pages-03-job-03-job/04-pages-03-job-03-job.html">
-                            <span class="title value">Entry-Level Strategic Account Manager</span></span>
+                            <span class="title value">Medical Assistant</span></span>
                         </a>
                         <span class="headline">
-                            <strong>Oakland, CA</strong> - State Industrial Products
+                            <strong>Los Angeles, CA</strong> - HealthCare Partners
                         </span>
                     </div>
                     <div class="col-sm-4 text-right">
@@ -240,10 +240,10 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <a href="../../patterns/04-pages-03-job-03-job/04-pages-03-job-03-job.html">
-                            <span class="title value">Business Analyst</span>
+                            <span class="title value">Medical Support Assistant</span>
                         </a>
                         <span class="headline">
-                            <strong>San Francisco Bay Area, CA</strong> - CE2 Corporation
+                            <strong>Long Beach, CA, CA</strong> - Department of Veterans Affairs
                         </span>
                     </div>
                     <div class="col-sm-4 text-right">
