--- a/patterns/04-pages-02-job-seeker-02-job-seeker-browse-jobs/04-pages-02-job-seeker-02-job-seeker-browse-jobs.html
+++ b/patterns/04-pages-02-job-seeker-02-job-seeker-browse-jobs/04-pages-02-job-seeker-02-job-seeker-browse-jobs.html
@@ -157,10 +157,10 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <a href="../../patterns/04-pages-03-job-03-job/04-pages-03-job-03-job.html">
-                            <span class="title value">Business Support Specialist</span>
+                            <span class="title value">Medical Assistant II</span>
                         </a>
                         <span class="headline">
-                            <strong>San Francisco, CA</strong> - Ariba
+                            <strong>Los Angeles, CA</strong> - Cedars-Sinai
                         </span>
                     </div>
                 </div>
@@ -191,10 +191,10 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <a href="../../patterns/04-pages-03-job-03-job/04-pages-03-job-03-job.html">
-                            <span class="title value">Wealth Management Associate</span>
+                            <span class="title value">Cross Trained Medical Assistant</span>
                         </a>
                         <span class="headline">
-                            <strong>San Francisco, CA</strong> - Morgan Stanley
+                            <strong>Burbank, CA</strong> - OfficeWorks Inc.
                         </span>
                     </div>
                 </div>
@@ -221,7 +221,7 @@
                         <div class="row">
                             <div class="col-lg-8">
                                 <div class="main-box small-graph-box green-bg">
-                                    <span class="value">For Degree Program: Business Administration</span>
+                                    <span class="value">For Degree Program: Medical Assisting</span>
                                 </div>
                             </div>
                         </div>
@@ -233,10 +233,10 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <a href="../../patterns/04-pages-03-job-03-job/04-pages-03-job-03-job.html">
-                            <span class="title value">Business Development Associate</span>
+                            <span class="title value">X-Ray Tech/Medical Assistant</span>
                         </a>
                         <span class="headline">
-                            <strong>San Francisco Bay Area, CA</strong> - Ninyo & Moore
+                            <strong>San Fernando Valley, CA</strong> - Urgent Care
                         </span>
                     </div>
                 </div>
@@ -267,10 +267,10 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <a href="../../patterns/04-pages-03-job-03-job/04-pages-03-job-03-job.html">
-                            <span class="title value">Account Representative</span>
+                            <span class="title value">Medical Assistant-FT</span>
                         </a>
                         <span class="headline">
-                            <strong>Hayward, CA</strong> - FRSTeam by Custom Commercial
+                            <strong>Pasadena, CA</strong> - Planned Parenthood Pasadena and San Gabriel Valley
                         </span>
                     </div>
                 </div>
