--- a/patterns/04-pages-00-career-services-00-career-services-active/04-pages-00-career-services-00-career-services-active.html
+++ b/patterns/04-pages-00-career-services-00-career-services-active/04-pages-00-career-services-00-career-services-active.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="pl">
 	<head>
-		<title>Lincoln Unversity: Active Students</title>
+		<title>CBD College: Active Students</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width" />
 
@@ -125,10 +125,10 @@
                             <div class="col-lg-12">
                                 <ol class="breadcrumb">
                                     <li><a href="#">Home</a></li>
-                                    <li class="active"><span>Lincoln Unversity: Active Students</span></li>
+                                    <li class="active"><span>CBD College: Active Students</span></li>
                                 </ol>
 
-                                <h1>Lincoln Unversity: Active Students</h1>
+                                <h1>CBD College: Active Students</h1>
                             </div>
                         </div>
 
