--- a/patterns/04-pages-01-landing-01-landing-register/04-pages-01-landing-01-landing-register.html
+++ b/patterns/04-pages-01-landing-01-landing-register/04-pages-01-landing-01-landing-register.html
@@ -50,7 +50,7 @@
                         <div class="col-xs-12">
                             <header id="login-header">
                                 <div id="login-logo">
-                                    <img src="https://www.dropbox.com/s/v05uilzzxl235il/cbd-college-logo.jpg?dl=1" alt=""/>
+                                    <img src="https://www.dropbox.com/s/d10v2f99smf91h2/cbd-college-logo.png?dl=1" alt=""/>
                                 </div>
                             </header>
                             <div id="login-box-inner">
